--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,17 +6,17 @@
     <title>{% block title %}{{ title }}{% endblock %}</title>
     
     <!-- Common CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.79.0/dist/L.Control.Locate.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="{{ url_for('static', path='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', path='vendor/leaflet/css/leaflet.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', path='vendor/leaflet-locate/css/L.Control.Locate.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', path='vendor/fontawesome/css/all.min.css') }}">
     <link href="{{ url_for('static', path='css/style.css') }}" rel="stylesheet">
     
     <!-- Common JS -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.79.0/dist/L.Control.Locate.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <script src="{{ url_for('static', path='vendor/leaflet/js/leaflet.js') }}"></script>
+    <script src="{{ url_for('static', path='vendor/leaflet-locate/js/L.Control.Locate.min.js') }}"></script>
+    <script src="{{ url_for('static', path='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+    <script defer src="{{ url_for('static', path='vendor/alpinejs/js/cdn.min.js') }}"></script>
     <script src="{{ url_for('static', path='js/app.js') }}"></script>
     
     {% block extra_head %}{% endblock %}
