--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,6 +33,7 @@
     
     {% include 'partials/footer.html' %}
     {% include 'partials/log_modal.html' %}
+    {% include 'partials/shell_modal.html' %}
     
     {% block extra_body %}{% endblock %}
 </body>
