--- a/app/templates/status.html
+++ b/app/templates/status.html
@@ -464,10 +464,17 @@
             <div class="row mt-4" x-show="systemInfo?.os_release">
                 <div class="col">
                     <div class="card">
-                        <div class="card-header">
+                        <div class="card-header d-flex justify-content-between align-items-center">
                             <h5 class="card-title mb-0">
                                 <i class="fas fa-info-circle me-2"></i>OS Release Information
                             </h5>
+                            <button type="button" class="btn btn-outline-primary btn-sm" 
+                                    data-bs-toggle="modal" 
+                                    data-bs-target="#shellModal"
+                                    title="Open Interactive Shell">
+                                <i class="fas fa-terminal me-1"></i>
+                                <span class="d-none d-sm-inline">Shell</span>
+                            </button>
                         </div>
                         <div class="card-body">
                             <!-- Mobile-friendly OS Release info using definition list -->
