--- a/app/templates/soundscapepipe.html
+++ b/app/templates/soundscapepipe.html
@@ -1031,7 +1031,7 @@
                                                     <template x-if="!loadingLureFiles && (!lureFiles.directories || lureFiles.directories.length === 0) && (!lureFiles.files || lureFiles.files.length === 0)">
                                                         <div class="text-muted small mt-1">
                                                             <i class="fas fa-exclamation-triangle me-1"></i>
-                                                            No files found in /data/lure
+                                                            No files found in lure directories (/data/lure or /home/pi/lure)
                                                         </div>
                                                     </template>
                                                 </div>
